c2prj1_cards/grade.txt
Grading at Wed Jun 10 07:38:48 UTC 2020
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:98:3: error: enumeration value ‘SPADES’ not handled in switch [-Werror=switch]
   switch(temp.suit){
   ^
cards.c:98:3: error: enumeration value ‘HEARTS’ not handled in switch [-Werror=switch]
cards.c:98:3: error: enumeration value ‘DIAMONDS’ not handled in switch [-Werror=switch]
cards.c:98:3: error: enumeration value ‘CLUBS’ not handled in switch [-Werror=switch]
cards.c:98:3: error: enumeration value ‘NUM_SUITS’ not handled in switch [-Werror=switch]
cards.c:103:3: error: case value ‘99’ not in enumerated type ‘suit_t {aka enum <anonymous>}’ [-Werror=switch]
   case 'c' : temp.suit = CLUBS ; break;
   ^
cards.c:102:3: error: case value ‘100’ not in enumerated type ‘suit_t {aka enum <anonymous>}’ [-Werror=switch]
   case 'd' : temp.suit = DIAMONDS ; break;
   ^
cards.c:101:3: error: case value ‘104’ not in enumerated type ‘suit_t {aka enum <anonymous>}’ [-Werror=switch]
   case 'h' : temp.suit = HEARTS ; break;
   ^
cards.c:100:3: error: case value ‘115’ not in enumerated type ‘suit_t {aka enum <anonymous>}’ [-Werror=switch]
   case 's' : temp.suit = SPADES ; break;
   ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
